@@ -1,5 +1,9 @@
 2004-10-29  Matthias Clasen  <mclasen@redhat.com>
 
+	* gtk/gtkclipboard.c (gtk_clipboard_set_text): Don't hardwire
+	the supported text targets here, use 
+	gtk_target_list_add_text_targets().  (#156404)
+
 	* gtk/gtkliststore.c (gtk_list_store_reorder): Don't
 	loop over the sentinel node.  (#156298, Torsten Schoenfeld)
 
